--- a/index.html
+++ b/index.html
@@ -4,59 +4,64 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>HSE Guardian AI</title>
-    <script src="https://cdn.tailwindcss.com"></script>
     <style>
-      @keyframes pulse-danger {
-        0%, 100% { border-color: rgba(239, 68, 68, 0.5); box-shadow: 0 0 0 0 rgba(239, 68, 68, 0.7); }
-        50% { border-color: rgba(239, 68, 68, 1); box-shadow: 0 0 15px 0 rgba(239, 68, 68, 0.4); }
-      }
-      /* Disable text selection for kiosk feel */
       body {
+        margin: 0;
+        padding: 0;
+        /* Prioritize system fonts for offline safety and native feel */
+        font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+        background-color: #020617;
+        color: #f1f5f9;
+        overflow: hidden;
         user-select: none;
         -webkit-user-select: none;
       }
-      /* Custom Scrollbar for WebKit */
-      .custom-scrollbar::-webkit-scrollbar {
-        width: 6px;
-        height: 6px;
+      
+      * {
+        box-sizing: border-box;
       }
-      .custom-scrollbar::-webkit-scrollbar-track {
+
+      /* Scrollbar */
+      ::-webkit-scrollbar {
+        width: 8px;
+        height: 8px;
+      }
+      ::-webkit-scrollbar-track {
         background: #0f172a; 
       }
-      .custom-scrollbar::-webkit-scrollbar-thumb {
+      ::-webkit-scrollbar-thumb {
         background: #334155; 
-        border-radius: 3px;
+        border-radius: 4px;
       }
-      .custom-scrollbar::-webkit-scrollbar-thumb:hover {
-        background: #475569; 
-      }
+
+      /* Animations */
+      @keyframes spin { 100% { transform: rotate(360deg); } }
+      @keyframes pulse { 50% { opacity: .5; } }
+      @keyframes ping { 75%, 100% { transform: scale(2); opacity: 0; } }
+      @keyframes grow-bar { from { width: 0; } }
+
+      .animate-spin { animation: spin 1s linear infinite; }
+      .animate-pulse { animation: pulse 2s cubic-bezier(0.4, 0, 0.6, 1) infinite; }
+      .animate-ping { animation: ping 1s cubic-bezier(0, 0, 0.2, 1) infinite; }
+      .animate-grow { animation: grow-bar 1s ease-out forwards; }
     </style>
   <script type="importmap">
 {
   "imports": {
-    "react": "https://esm.sh/react@^19.2.3",
-    "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
-    "react/": "https://esm.sh/react@^19.2.3/",
-    "lucide-react": "https://esm.sh/lucide-react@^0.562.0",
-    "vite": "https://esm.sh/vite@^7.3.0",
-    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2",
-    "@google/genai": "https://esm.sh/@google/genai@^1.34.0",
-    "@tensorflow/tfjs": "https://esm.sh/@tensorflow/tfjs@4.17.0",
-    "@tensorflow-models/coco-ssd": "https://esm.sh/@tensorflow-models/coco-ssd@2.2.3"
+    "react/": "https://esm.sh/react@^19.2.4/",
+    "react": "https://esm.sh/react@^19.2.4",
+    "react-dom/": "https://esm.sh/react-dom@^19.2.4/",
+    "@mlc-ai/web-llm": "https://esm.sh/@mlc-ai/web-llm@0.2.61",
+    "@tensorflow/tfjs": "https://esm.sh/@tensorflow/tfjs@^4.22.0",
+    "@tensorflow-models/coco-ssd": "https://esm.sh/@tensorflow-models/coco-ssd@^2.2.3",
+    "vite": "https://esm.sh/vite@^7.3.1",
+    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.4"
   }
 }
 </script>
 </head>
-  <body class="bg-slate-950 text-slate-100 overflow-hidden">
+  <body>
     <div id="root"></div>
     <script type="module" src="/index.tsx"></script>
-    <script>
-      // Prevent F12/DevTools in production (Electron handles this better via main.js, but good redundancy)
-      document.addEventListener('keydown', function(e) {
-        if (e.key === 'F12' || (e.ctrlKey && e.shiftKey && e.key === 'I')) {
-          e.preventDefault();
-        }
-      });
-    </script>
   </body>
 </html>
