--- a/index.html
+++ b/index.html
@@ -48,14 +48,14 @@
   <script type="importmap">
 {
   "imports": {
+    "react-dom/": "https://esm.sh/react-dom@^19.2.4/",
+    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.4",
     "react/": "https://esm.sh/react@^19.2.4/",
     "react": "https://esm.sh/react@^19.2.4",
-    "react-dom/": "https://esm.sh/react-dom@^19.2.4/",
-    "@mlc-ai/web-llm": "https://esm.sh/@mlc-ai/web-llm@0.2.61",
-    "@tensorflow/tfjs": "https://esm.sh/@tensorflow/tfjs@^4.22.0",
-    "@tensorflow-models/coco-ssd": "https://esm.sh/@tensorflow-models/coco-ssd@^2.2.3",
     "vite": "https://esm.sh/vite@^7.3.1",
-    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.4"
+    "@tensorflow-models/coco-ssd": "https://esm.sh/@tensorflow-models/coco-ssd@^2.2.3",
+    "@mlc-ai/web-llm": "https://esm.sh/@mlc-ai/web-llm@^0.2.80",
+    "@tensorflow/tfjs": "https://esm.sh/@tensorflow/tfjs@^4.22.0"
   }
 }
 </script>
