feat: Integrate Google Gemini AI for advanced safety analysis
Replaced MLC-AI engine with Google Gemini Pro via the `@google/genai` SDK. This change enables more sophisticated real-time safety monitoring and risk assessment capabilities for the HSE Guardian AI Intelligent application.

The integration involves:
- Updating dependencies to include the new SDK.
- Modifying the `LocalAiService` to manage the Gemini API connection and simulate initialization progress for UI consistency.
- Preparing the application for enhanced vision and text-based AI features.

--- a/index.html
+++ b/index.html
@@ -55,7 +55,8 @@
     "vite": "https://esm.sh/vite@^7.3.1",
     "@tensorflow-models/coco-ssd": "https://esm.sh/@tensorflow-models/coco-ssd@^2.2.3",
     "@mlc-ai/web-llm": "https://esm.sh/@mlc-ai/web-llm@^0.2.80",
-    "@tensorflow/tfjs": "https://esm.sh/@tensorflow/tfjs@^4.22.0"
+    "@tensorflow/tfjs": "https://esm.sh/@tensorflow/tfjs@^4.22.0",
+    "@google/genai": "https://esm.sh/@google/genai@^1.41.0"
   }
 }
 </script>
